# lending-protocol

./: .gitignore  IMPLEMENTATION_PROGRESS.md  MIDEN_IMPLEMENTATION_GUIDE.md  NOTES_COMPLETE.md  PHASE3_INTEGRATION.md  PHASE3_SUMMARY.md  PROGRESS_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  SETUP_COMPLETE.md
accounts/: lending_pool.masm  price_oracle.masm  user_lending.masm
client/: Cargo.toml  README.md  build.rs  deployment_info.json  test_accounts.json
client/src/: accounts.rs  config.rs  lib.rs  main.rs  miden_client.rs  transactions.rs  utils.rs
client/src/asm/contracts/: lending_pool.masm
client/src/components/: lending_pool.rs  mod.rs  price_oracle.rs  user_lending.rs
client/src/errors/: lending_errors.rs  mod.rs
client/tests/: integration_tests.rs
modules/: interest_rate.masm
notes/: borrow_note.masm  deposit_note.masm  liquidation_note.masm  repay_note.masm  withdraw_note.masm
scripts/: deploy_local.sh  setup_test_accounts.sh  test_deployment.sh
