[package]
name = "miden-lending-client"
version = "0.1.0"
edition = "2021"

[dependencies]
miden-client = { git = "https://github.com/0xPolygonMiden/miden-client.git" }
miden-lib = { git = "https://github.com/0xPolygonMiden/miden-base.git" }
miden-objects = { git = "https://github.com/0xPolygonMiden/miden-base.git" }
miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git" }
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
