[package]
name = "miden-lending-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "miden_lending_client"
path = "src/lib.rs"

[[bin]]
name = "miden-lending-client"
path = "src/main.rs"

[dependencies]
miden-client = { version = "0.11.4", default-features = false }

miden-lib = { version = "0.11.4", default-features = false }
miden-objects = { version = "0.11.4", default-features = false }
miden-tx = { version = "0.11.4", default-features = false }
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
dirs = "5.0"
